# bf-algen

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: fetch_content.cmake
exec/: CMakeLists.txt
exec/src/: main.cpp
lib/: CMakeLists.txt
lib/bf_code_generator/: CMakeLists.txt
lib/bf_code_generator/include/bf_code_generator/: GeneticCodeGenerator.hpp  Genotype.hpp  fwd.hpp
lib/bf_code_generator/src/: BfCodeGenerator.cpp  GeneticCodeGenerator.cpp
lib/bf_interpreter/: CMakeLists.txt
lib/bf_interpreter/include/bf/: Interpreter.hpp
lib/bf_interpreter/include/bf_interpreter/: Interpreter.hpp
lib/bf_interpreter/src/: Interpreter.cpp
lib/util/: CMakeLists.txt
lib/util/include/util/: random.hpp  string.hpp  util.hpp
lib/util/src/: util.cpp
test/: CMakeLists.txt
test/src/: bf_interpreter_tests.cpp  util_rand_tests.cpp  util_string_tests.cpp  util_tests.cpp
